core/saleor-core-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: saleor-core
  namespace: saleor-core
spec:
  endpointSelector:
    matchLabels:
      app: saleor-core
  ingress:
    - fromEntities:
        - world
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchPattern: "demo-saleor-core-redis-cluster-8544b0a.adxo96.ng.0001.euc1.cache.amazonaws.com"
      toPorts:
        - ports:
            - port: "6379"
    - toFQDNs:
        - matchPattern: "saleor.celfnipmusup.eu-central-1.rds.amazonaws.com"
      toPorts:
        - ports:
            - port: "5432"
    - toFQDNs:
        - matchPattern: "*.s3.eu-central-1.amazonaws.com"
      toPorts:
        - ports:
            - port: "443"
